<resources>
    <string name="app_name">UglyToy</string>
    <string name="flag_message">FReader</string>
    <string name="login_username_hint">用户名或者邮箱</string>
    <string name="login_password_hint">密码</string>
    <string name="login_button">登录</string>
    <string name="go_register">没有FReader账号？去注册</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_email_hint">邮箱</string>
    <string name="register_password_hint">密码</string>
    <string name="register_password_repeat_hint">确认密码</string>
    <string name="register_button">注册</string>
    <string name="go_login">已有FReader账户？去登录</string>
</resources>
